persona/src/main/java/com/testing/springcloud/persona/error/ProcesarError.java
package com.testing.springcloud.persona.error;

@FunctionalInterface
public interface ProcesarError {

	Object procesar(Exception e);

}
